[gd_scene load_steps=11 format=3 uid="uid://bewr6h7wqug80"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_2qsrs"]
[ext_resource type="Texture2D" uid="uid://cxrffmqdh1upw" path="res://assets/Art/841E9B78-D6A0-4E86-BDF9-D1028AF6CAC0.png" id="2_b20fd"]
[ext_resource type="Texture2D" uid="uid://bstko3k7bwre5" path="res://assets/Art/3F59F722-26A0-4A14-B182-F57373574DC1.jpeg" id="3_14btw"]

[sub_resource type="Theme" id="Theme_wfcr7"]
Label/colors/font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xx13"]
bg_color = Color(0.584314, 0.666667, 0.843137, 1)

[sub_resource type="Theme" id="Theme_2cydg"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/styles/disabled = null
Button/styles/normal = SubResource("StyleBoxFlat_2xx13")

[sub_resource type="Theme" id="Theme_v058u"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_38ob1"]
texture = ExtResource("3_14btw")

[sub_resource type="Animation" id="Animation_ltriq"]
resource_name = "fade out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"move_to_character_select"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s2nwi"]
_data = {
"fade out": SubResource("Animation_ltriq")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_wfcr7")
script = ExtResource("1_2qsrs")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_b20fd")

[node name="SplashMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -241.0
offset_top = -142.0
offset_right = 242.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_2cydg")

[node name="SplashStartButton" type="Button" parent="SplashMenu"]
layout_mode = 2
text = "start"

[node name="SettingsButton" type="Button" parent="SplashMenu"]
layout_mode = 2
text = "settings"

[node name="CreditsButton" type="Button" parent="SplashMenu"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="SplashMenu"]
layout_mode = 2
text = "QUIT"

[node name="SettingsMenu" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -62.5
offset_right = 20.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsLabel" type="Label" parent="SettingsMenu"]
layout_mode = 2
text = "settings"

[node name="Label" type="Label" parent="SettingsMenu"]
layout_mode = 2
text = "funny mode"

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/Label"]
layout_mode = 2
offset_left = 426.0
offset_top = -0.5
offset_right = 588.0
offset_bottom = 33.5

[node name="AudioLabel" type="Label" parent="SettingsMenu"]
layout_mode = 2
text = "audio"

[node name="AudioSlider" type="HSlider" parent="SettingsMenu/AudioLabel"]
layout_mode = 2
offset_left = 204.0
offset_top = 4.0
offset_right = 587.0
offset_bottom = 26.0
value = 60.0

[node name="SettingsBackButton" type="Button" parent="SettingsMenu"]
layout_mode = 2
text = "back"

[node name="CreditsMenu" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_v058u")
theme_override_styles/panel = SubResource("StyleBoxTexture_38ob1")

[node name="CreditsBackButton" type="Button" parent="CreditsMenu"]
layout_mode = 2
offset_left = 331.0
offset_top = 575.0
offset_right = 931.0
offset_bottom = 606.0
text = "back"

[node name="Panel" type="Panel" parent="CreditsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -407.5
offset_top = -209.5
offset_right = 407.5
offset_bottom = 209.5
grow_horizontal = 2
grow_vertical = 2

[node name="art" type="Label" parent="CreditsMenu/Panel"]
layout_mode = 2
offset_left = -95.0
offset_top = 65.0
offset_right = 505.0
offset_bottom = 158.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Art and Music:
Matthew Novitsky

Writing:
Hugo Espinosa

Programming:
Harry Stebbins
Austin Pejovich
Remy Carr"
horizontal_alignment = 1

[node name="art4" type="Label" parent="CreditsMenu/Panel"]
layout_mode = 2
offset_left = 187.0
offset_top = 70.0
offset_right = 933.0
offset_bottom = 437.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Special Thanks:

plugins: 
Haoyu Qi, Nathan Hoad,
and Matt J Lars

sfx: 
Nintendo

Beer:
Modelo, PBR, HasenSt√ºble"
horizontal_alignment = 1

[node name="PlayerCountMenu" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -62.5
offset_right = 20.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerCountLabel" type="Label" parent="PlayerCountMenu"]
layout_mode = 2
text = "player count"

[node name="OptionButton" type="OptionButton" parent="PlayerCountMenu"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "2"
popup/item_0/id = 2
popup/item_1/text = "3"
popup/item_1/id = 3
popup/item_2/text = "4"
popup/item_2/id = 4

[node name="StartButton" type="Button" parent="PlayerCountMenu"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "start"

[node name="PlayerCountBackButton" type="Button" parent="PlayerCountMenu"]
layout_mode = 2
text = "back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Fader")
libraries = {
"": SubResource("AnimationLibrary_s2nwi")
}

[node name="Fader" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[connection signal="pressed" from="SplashMenu/SplashStartButton" to="." method="_on_splash_start_button_pressed"]
[connection signal="pressed" from="SplashMenu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SplashMenu/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="SplashMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingsMenu/SettingsBackButton" to="." method="_on_settings_back_button_pressed"]
[connection signal="pressed" from="CreditsMenu/CreditsBackButton" to="." method="_on_credits_back_button_pressed"]
[connection signal="pressed" from="PlayerCountMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PlayerCountMenu/PlayerCountBackButton" to="." method="_on_player_count_back_button_pressed"]
